// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getIosStatusAddressToolBarHeight should get the correct homebar as toolbar height for an iPhone X with iOS 12 that has been scrolled 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 94,
    "width": 375,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 5,
    "width": 135,
    "x": 120,
    "y": 799,
  },
}
`;

exports[`getIosStatusAddressToolBarHeight should get the correct homebar as toolbar height for an iPhone XS MAx with iOS 12 that has been scrolled 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 94,
    "width": 414,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 5,
    "width": 148,
    "x": 133,
    "y": 883,
  },
}
`;

exports[`getIosStatusAddressToolBarHeight should get the correct status, address and toolbar height for an iPad Pro with to touch id and with iOS 12 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 74,
    "width": 1024,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 0,
    "width": 1024,
    "x": 0,
    "y": 1366,
  },
}
`;

exports[`getIosStatusAddressToolBarHeight should get the correct status, address and toolbar height for an iPad with iOS 12 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 70,
    "width": 768,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 0,
    "width": 768,
    "x": 0,
    "y": 1024,
  },
}
`;

exports[`getIosStatusAddressToolBarHeight should get the correct status, address and toolbar height for an iPad with iPadOS 13 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 70,
    "width": 768,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 0,
    "width": 768,
    "x": 0,
    "y": 1024,
  },
}
`;

exports[`getIosStatusAddressToolBarHeight should get the correct status, address and toolbar height for an iPhone X with iOS 11 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 94,
    "width": 375,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 83,
    "width": 375,
    "x": 0,
    "y": 729,
  },
}
`;

exports[`getIosStatusAddressToolBarHeight should get the correct status, address and toolbar height for an iPhone XS Max with iOS 12 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 94,
    "width": 414,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 83,
    "width": 414,
    "x": 0,
    "y": 813,
  },
}
`;

exports[`getIosStatusAddressToolBarHeight should get the correct status, address and toolbar height for an iPhone with iOS 10 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 64,
    "width": 375,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 50,
    "width": 375,
    "x": 0,
    "y": 617,
  },
}
`;

exports[`getIosStatusAddressToolBarHeight should get the correct toolbar height for an iPhone with iOS 12 that has been scrolled 1`] = `
Object {
  "statusAddressBar": Object {
    "height": 70,
    "width": 375,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 0,
    "width": 375,
    "x": 0,
    "y": 0,
  },
}
`;
